# yukibot6059

./: .env.example  .gitignore  .replit  AI_INTEGRATION_SUMMARY.md  Dockerfile  FIXES_SUMMARY.md  GUILD_PROGRESS_TRACK.md  LICENSE  README.md  abusive_words.db  ai_profanity_learning.db  api.txt  api_example.txt  bot_database.db  bot_database.db-journal  commands_list.txt  comprehensive_filter.db  config.py  database.py  database_setup.py  debug_admin_system.py  examples_أوامر_الأسياد.txt  examples_تجربة_الردود.txt  fix_admin_loading.py  main.py  pyproject.toml  replit.md  requirements.txt  run.py  start.bat  start.sh  test_content_filter.py  test_monitoring_guide.md  yukibot.db  اوامر يوكي.txt  جديد.txt  جديد1.txt  مقترح لعبة جديدة.txt
attached_assets/: اوامر_1755386021258.txt
config/: __init__.py  database.py  hierarchy.py  ranks_system.py  settings.py
database/: __init__.py  models.py  operations.py  operations_old.py  user_analysis_operations.py  user_analysis_schema.py
docs/: user_analysis_system_concept.md
handlers/: __init__.py  admin_callbacks.py  advanced_admin_handler.py  bug_report_handler.py  callbacks.py  commands.py  comprehensive_content_handler.py  group_events.py  group_message_tracker.py  guild_handler.py  memory_commands.py  messages.py  smart_commands.py  unified_message_processor.py  xp_integration.py
modules/: __init__.py  abusive_detector.py  admin.py  admin_management.py  admin_reports_system.py  administration.py  advanced_admin.py  ai_filters.py  ai_integration_handler.py  ai_player.py  ai_profanity_commands.py  ai_profanity_detector.py  (+118 more)
(+20 files in other folders)
